--- a/CSS/home.css
+++ b/CSS/home.css
@@ -183,25 +183,35 @@ p {
 }
 
 .video {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  padding-bottom: 20px;
-  max-width: 1300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
+  padding-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .video h1 {
   color: #3a7206;
-  padding: 50px 0;
+  padding: 30px 0;
 }
 
 .responsive-iframe {
-  width: 90%;
-  height: 50vh;
+  width: 100%;
+  height: 40vh;
   border: none;
-  border-radius: 40px;
+  border-radius: 30px;
 }
 
 .testimonial {
@@ -316,6 +326,14 @@ p {
   -ms-flex-preferred-size: 12%;
       flex-basis: 12%;
   text-align: center;
+}
+
+.footer-col-3 a:hover {
+  color: white;
+}
+
+.footer-col-4 a:hover {
+  color: white;
 }
 
 ul {
