--- a/CSS/home.scss
+++ b/CSS/home.scss
@@ -124,6 +124,7 @@ p
     margin: 70px 0;
     border-radius: 30px;
     transition: background 0.8s;
+
 }
 .btn:hover
 {
@@ -170,25 +171,26 @@ p
 }
 .video
 {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    padding-bottom: 20px;
-    max-width: 1300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+    padding-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .video h1
 {
     color: $primary-color;
-    padding: 50px 0;
+    padding: 30px 0;
 }
 .responsive-iframe
 {
-    width: 90%;
-    height: 50vh;
+    width: 100%;
+    height: 40vh;
     border: none;
-    border-radius: 40px;
+    border-radius: 30px;
 }
 .testimonial
 {
@@ -297,6 +299,15 @@ p
 {
     flex-basis: 12%;
     text-align: center;
+
+}
+.footer-col-3 a:hover
+{
+    color: white;
+}  
+.footer-col-4 a:hover
+{
+    color: white;
 
 }
 ul
