--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -183,25 +183,35 @@ p {
 }
 
 .video {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  padding-bottom: 20px;
-  max-width: 1300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
+  padding-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .video h1 {
   color: #3a7206;
-  padding: 50px 0;
+  padding: 30px 0;
 }
 
 .responsive-iframe {
-  width: 90%;
-  height: 50vh;
+  width: 100%;
+  height: 40vh;
   border: none;
-  border-radius: 40px;
+  border-radius: 30px;
 }
 
 .testimonial {
@@ -318,6 +328,14 @@ p {
   text-align: center;
 }
 
+.footer-col-3 a:hover {
+  color: white;
+}
+
+.footer-col-4 a:hover {
+  color: white;
+}
+
 ul {
   list-style: none;
 }
@@ -345,16 +363,22 @@ ul {
   .responsive-iframe {
     height: 25vh;
   }
+  .video {
+    width: 80%;
+  }
+  .video h1 {
+    font-size: 25px;
+    font-weight: 300;
+  }
   .dropdown {
     float: left;
     text-align: right;
     width: 100%;
     border: 1px solid black;
-    background: #3a7206;
+    background: #72a741;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    z-index: 100;
   }
   .dropdown .dropbtn {
     font-size: 20px;
@@ -413,6 +437,9 @@ ul {
         -ms-flex-align: center;
             align-items: center;
   }
+  .container h1 {
+    font-weight: 300;
+  }
   .col-2 {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -429,6 +456,7 @@ ul {
     font-size: 30px;
     line-height: 30px;
     text-align: center;
+    font-weight: 400;
   }
   .col-2 p {
     font-size: 20px;
@@ -458,6 +486,20 @@ ul {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    text-align: center;
+  }
+  .footer-col-1 p {
+    text-align: center;
+  }
+  .footer-col-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+  }
+  .footer-col-2 p {
     text-align: center;
   }
 }
