--- a/CSS/whyEV.css
+++ b/CSS/whyEV.css
@@ -39,6 +39,10 @@ body {
   padding: 20px;
 }
 
+.logo img {
+  width: 155px;
+}
+
 nav {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -113,6 +117,11 @@ p {
   line-height: 60px;
   margin: 25px 0;
   font-weight: 500;
+  color: #3a7206;
+}
+
+.col-2 p {
+  text-align: justify;
 }
 
 .btn {
@@ -161,25 +170,191 @@ p {
   cursor: pointer;
 }
 
-.video {
-  position: relative;
+.col-4 {
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+  min-width: 250px;
+  margin-bottom: 30px;
+}
+
+.col-4 img {
   width: 100%;
-  height: 80vh;
-  overflow: hidden;
-  padding-bottom: 20px;
-  max-width: 1300px;
+  cursor: pointer;
+}
+
+.video {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
+  padding-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .video h1 {
   color: #3a7206;
-  padding: 50px 0;
+  padding: 30px 0;
 }
 
 .responsive-iframe {
-  width: 80%;
-  height: 50%;
+  width: 100%;
   border: none;
-  border-radius: 40px;
+  border-radius: 30px;
+}
+
+.testimonial {
+  padding-top: 100px;
+}
+
+.testimonial .col-4 {
+  text-align: center;
+  padding: 40px 20px;
+  -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+}
+
+.testimonial .col-4:hover {
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
+}
+
+.testimonial img {
+  width: 40%;
+  margin-top: 20px;
+  border-radius: 50%;
+  height: 10vh;
+}
+
+.quote {
+  height: 18vh;
+  gap: 20px;
+}
+
+.fa.fa-quote-left {
+  color: #3a7206;
+}
+
+.col-4 p {
+  font-size: 15px;
+  margin: 12px 0;
+  color: #777;
+}
+
+.col-4 h3 {
+  font-size: 15px;
+  color: #3a7206;
+  font-weight: 600;
+}
+
+.brands {
+  margin: 100px auto;
+}
+
+.col-5 {
+  width: 160px;
+}
+
+.col-5 img {
+  width: 100%;
+  cursor: pointer;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+}
+
+.col-5 img:hover {
+  -webkit-filter: grayscale(0);
+          filter: grayscale(0);
+}
+
+.footer {
+  background: #000;
+  color: #8a8a8a;
+  font-size: 14px;
+  padding: 60px 0 20px;
+}
+
+.footer p {
+  color: #8a8a8a;
+  font-size: 14px;
+}
+
+.footer h3 {
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4 {
+  min-width: 250px;
+  margin-bottom: 20px;
+}
+
+.footer-col-1 {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+}
+
+.footer-col-2 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: center;
+}
+
+.footer-col-2 img {
+  width: 180px;
+  margin-bottom: 20px;
+}
+
+.footer-col-3, .footer-col-4 {
+  -ms-flex-preferred-size: 12%;
+      flex-basis: 12%;
+  text-align: center;
+}
+
+.footer-col-3 a:hover {
+  color: white;
+}
+
+.footer-col-4 a:hover {
+  color: white;
+}
+
+ul {
+  list-style: none;
+}
+
+.app-logo {
+  margin-top: 20px;
+}
+
+.app-logo img {
+  width: 140px;
+}
+
+.footer hr {
+  border: none;
+  background: #b5b5b5;
+  height: 1px;
+  margin: 20px 0;
+}
+
+.copyright {
+  text-align: center;
 }
 /*# sourceMappingURL=whyEV.css.map */
