--- a/CSS/home.css
+++ b/CSS/home.css
@@ -29,46 +29,8 @@ body {
   padding-right: 45px;
 }
 
-.navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 20px;
-}
-
-.logo img {
-  width: 155px;
-}
-
-nav {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  text-align: right;
-}
-
-nav ul {
-  display: inline-block;
-  list-style-type: none;
-}
-
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-a {
-  text-decoration: none;
-  color: #555;
-  font-weight: 500;
-}
-
-nav a:hover {
-  cursor: pointer;
-  color: red;
+.container h1 {
+  font-weight: 400;
 }
 
 p {
@@ -182,38 +144,6 @@ p {
   cursor: pointer;
 }
 
-.video {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  padding-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.video h1 {
-  color: #3a7206;
-  padding: 30px 0;
-}
-
-.responsive-iframe {
-  width: 100%;
-  height: 40vh;
-  border: none;
-  border-radius: 30px;
-}
-
 .testimonial {
   padding-top: 100px;
 }
@@ -283,79 +213,49 @@ p {
           filter: grayscale(0);
 }
 
-.footer {
-  background: #000;
-  color: #8a8a8a;
-  font-size: 14px;
-  padding: 60px 0 20px;
-}
-
-.footer p {
-  color: #8a8a8a;
-  font-size: 14px;
-}
-
-.footer h3 {
-  color: #fff;
-  margin-bottom: 20px;
-}
-
-.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4 {
-  min-width: 250px;
-  margin-bottom: 20px;
-}
-
-.footer-col-1 {
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
-}
-
-.footer-col-2 {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  text-align: center;
-}
-
-.footer-col-2 img {
-  width: 180px;
-  margin-bottom: 20px;
-}
-
-.footer-col-3, .footer-col-4 {
-  -ms-flex-preferred-size: 12%;
-      flex-basis: 12%;
-  text-align: center;
-}
-
-.footer-col-3 a:hover {
-  color: white;
-}
-
-.footer-col-4 a:hover {
-  color: white;
-}
-
-ul {
-  list-style: none;
-}
-
-.app-logo {
-  margin-top: 20px;
-}
-
-.app-logo img {
-  width: 140px;
-}
-
-.footer hr {
-  border: none;
-  background: #b5b5b5;
-  height: 1px;
-  margin: 20px 0;
-}
-
-.copyright {
-  text-align: center;
+@media only screen and (max-width: 990px) {
+  .container h1 {
+    font-weight: 300;
+  }
+  .col-2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    text-align: center;
+  }
+  .col-2 h1 {
+    font-size: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-weight: 400;
+  }
+  .col-2 p {
+    font-size: 20px;
+  }
+  .col-2 img {
+    padding: 10px 0;
+  }
+  .btn {
+    margin: 10px 0;
+  }
+  .testimonial {
+    padding-top: 20px;
+  }
+  .testimonial img {
+    width: 70%;
+  }
+  .testimonial .col-4 {
+    margin: 30px;
+    width: 100%;
+  }
+  .row {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=home.css.map */
