--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -29,46 +29,8 @@ body {
   padding-right: 45px;
 }
 
-.navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 20px;
-}
-
-.logo img {
-  width: 155px;
-}
-
-nav {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  text-align: right;
-}
-
-nav ul {
-  display: inline-block;
-  list-style-type: none;
-}
-
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-a {
-  text-decoration: none;
-  color: #555;
-  font-weight: 500;
-}
-
-nav a:hover {
-  cursor: pointer;
-  color: red;
+.container h1 {
+  font-weight: 400;
 }
 
 p {
@@ -205,13 +167,13 @@ p {
 .video h1 {
   color: #3a7206;
   padding: 30px 0;
+  font-weight: 400;
 }
 
 .responsive-iframe {
   width: 100%;
   height: 40vh;
   border: none;
-  border-radius: 30px;
 }
 
 .testimonial {
@@ -360,16 +322,102 @@ ul {
 }
 
 @media only screen and (max-width: 990px) {
-  .responsive-iframe {
-    height: 25vh;
-  }
-  .video {
-    width: 80%;
-  }
-  .video h1 {
-    font-size: 25px;
+  .container h1 {
     font-weight: 300;
   }
+  .col-2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    text-align: center;
+  }
+  .col-2 h1 {
+    font-size: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-weight: 400;
+  }
+  .col-2 p {
+    font-size: 20px;
+  }
+  .col-2 img {
+    padding: 10px 0;
+  }
+  .btn {
+    margin: 10px 0;
+  }
+  .testimonial {
+    padding-top: 20px;
+  }
+  .testimonial img {
+    width: 70%;
+  }
+  .testimonial .col-4 {
+    margin: 30px;
+    width: 100%;
+  }
+  .row {
+    width: 100%;
+  }
+  .footer-col-1 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+  }
+  .footer-col-1 p {
+    text-align: center;
+  }
+  .footer-col-2 {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+  }
+  .footer-col-2 p {
+    text-align: center;
+  }
+}
+
+nav {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: right;
+}
+
+nav ul {
+  display: inline-block;
+  list-style-type: none;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: #555;
+  font-weight: 500;
+}
+
+nav a:hover {
+  cursor: pointer;
+  color: red;
+}
+
+@media only screen and (max-width: 990px) {
   .dropdown {
     float: left;
     text-align: right;
@@ -436,71 +484,6 @@ ul {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-  }
-  .container h1 {
-    font-weight: 300;
-  }
-  .col-2 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    text-align: center;
-  }
-  .col-2 h1 {
-    font-size: 30px;
-    line-height: 30px;
-    text-align: center;
-    font-weight: 400;
-  }
-  .col-2 p {
-    font-size: 20px;
-  }
-  .col-2 img {
-    padding: 10px 0;
-  }
-  .btn {
-    margin: 10px 0;
-  }
-  .testimonial {
-    padding-top: 20px;
-  }
-  .testimonial img {
-    width: 70%;
-  }
-  .testimonial .col-4 {
-    margin: 30px;
-    width: 100%;
-  }
-  .row {
-    width: 100%;
-  }
-  .footer-col-1 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-  }
-  .footer-col-1 p {
-    text-align: center;
-  }
-  .footer-col-2 {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-  }
-  .footer-col-2 p {
-    text-align: center;
   }
 }
 
