--- a/CSS/navbar.scss
+++ b/CSS/navbar.scss
@@ -1,18 +1,32 @@
 @import "home";
+nav
+{
+    flex: 1;
+    text-align: right;
+}
+nav ul
+{
+    display: inline-block;
+    list-style-type: none;
+}
+nav ul li
+{
+    display: inline-block;
+    margin-right: 20px;
+}
+a
+{
+    text-decoration: none;
+    color: #555;
+    font-weight: 500;
+}
+nav a:hover
+{
+    cursor: pointer;
+   color: red;
+}
 @media only screen and (max-width: 990px) {
-    .responsive-iframe
-    {
-        height: 25vh;
-    }
-    .video
-    {
-      width: 80%;
-    }
-    .video h1
-    {
-      font-size: 25px;
-      font-weight: 300;
-    }
+
     .dropdown {
         float: left;
         text-align: right;
@@ -81,78 +95,7 @@
         justify-content: center;
         align-items: center;
     }
-    .container h1
-    {
-      font-weight: 300;
-    }
-    .col-2
-    {
-        display: flex;
-        flex-direction: column;
-        flex-basis: 100%;
-        text-align: center;
-
-    }
-    .col-2 h1 
-    {
-        font-size: 30px;
-        line-height: 30px;
-        text-align: center;
-        font-weight: 400;
-    }
-    .col-2 p 
-    {
-        font-size: 20px;
-    }
-    .col-2 img 
-    {
-        padding: 10px 0;
-    }
-
-    .btn 
-    {
-        margin: 10px 0;
-
-    }
-    .testimonial
-    {
-        padding-top: 20px;
-    }
-  .testimonial img 
-  {
-      width: 70%;
-  }
-  .testimonial .col-4
-  {
-        margin: 30px;
-        width: 100%;
-  }
-  .row
-  {
-      width: 100%;
-  }
-  .footer-col-1
-  {
-     flex-basis: 100%;
-     justify-content: center;
-     text-align: center;
-  }
-  .footer-col-1 p 
-  {
-    text-align: center;
-  }
-  .footer-col-2
-  {
-     flex-basis: 100%;
-     justify-content: center;
-     text-align: center;
-   
-   
-  }
-  .footer-col-2 p
-  {
-    text-align: center;
-  }
+    
 
 }
 @media only screen and (min-width: 990px)
