--- a/CSS/whyEV.css
+++ b/CSS/whyEV.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
@@ -29,46 +30,8 @@ body {
   padding-right: 45px;
 }
 
-.navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  padding: 20px;
-}
-
-.logo img {
-  width: 155px;
-}
-
-nav {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  text-align: right;
-}
-
-nav ul {
-  display: inline-block;
-  list-style-type: none;
-}
-
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-a {
-  text-decoration: none;
-  color: #555;
-  font-weight: 500;
-}
-
-nav a:hover {
-  cursor: pointer;
-  color: red;
+.container h1 {
+  font-weight: 400;
 }
 
 p {
@@ -182,38 +145,6 @@ p {
   cursor: pointer;
 }
 
-.video {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  padding-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.video h1 {
-  color: #3a7206;
-  padding: 30px 0;
-}
-
-.responsive-iframe {
-  width: 100%;
-  height: 40vh;
-  border: none;
-  border-radius: 30px;
-}
-
 .testimonial {
   padding-top: 100px;
 }
@@ -283,79 +214,196 @@ p {
           filter: grayscale(0);
 }
 
-.footer {
-  background: #000;
-  color: #8a8a8a;
-  font-size: 14px;
-  padding: 60px 0 20px;
+@media only screen and (max-width: 990px) {
+  .container h1 {
+    font-weight: 300;
+  }
+  .col-2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    text-align: center;
+  }
+  .col-2 h1 {
+    font-size: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-weight: 400;
+  }
+  .col-2 p {
+    font-size: 20px;
+  }
+  .col-2 img {
+    padding: 10px 0;
+  }
+  .btn {
+    margin: 10px 0;
+  }
+  .testimonial {
+    padding-top: 20px;
+  }
+  .testimonial img {
+    width: 70%;
+  }
+  .testimonial .col-4 {
+    margin: 30px;
+    width: 100%;
+  }
+  .row {
+    width: 100%;
+  }
 }
 
-.footer p {
-  color: #8a8a8a;
-  font-size: 14px;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.footer h3 {
-  color: #fff;
-  margin-bottom: 20px;
+body {
+  font-family: 'Poppins', sans-serif;
+  background: radial-gradient(#fff, #d1f7ae);
 }
 
-.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4 {
-  min-width: 250px;
-  margin-bottom: 20px;
+.main-container {
+  max-width: 1300px;
+  margin: auto;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
-.footer-col-1 {
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
+.main-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.footer-col-2 {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+.main-header h1, h2 {
+  color: #3a7206;
+  font-weight: 500;
+  padding: 20px 0;
+}
+
+.main-header img {
+  padding: 20px 0;
+  border-radius: 80px;
+}
+
+.grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6 {
+  border: 2px solid #3a7206;
+  padding: 8px 8px;
+}
+
+.find-out {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-areas: "grid-1 grid-2 grid-3" "grid-4 grd-5 grid-6";
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+  row-gap: 10px;
+  padding: 20px 0;
+  grid-auto-rows: 1fr;
+}
+
+.graph {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: graph1 graph2;
+      grid-template-columns: graph1 graph2;
+      grid-template-areas: "grid-1 grid-2";
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+  row-gap: 10px;
+  padding: 20px 0;
+}
+
+.graph img {
+  width: 100%;
+}
+
+.title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: justify;
+}
+
+.page-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 30px 0;
+}
+
+.page-bottom h1 {
+  color: #3a7206;
+  font-weight: 400;
+  padding: 20px 0;
   text-align: center;
+  font-size: 20px;
 }
 
-.footer-col-2 img {
-  width: 180px;
-  margin-bottom: 20px;
-}
-
-.footer-col-3, .footer-col-4 {
-  -ms-flex-preferred-size: 12%;
-      flex-basis: 12%;
-  text-align: center;
-}
-
-.footer-col-3 a:hover {
-  color: white;
-}
-
-.footer-col-4 a:hover {
-  color: white;
-}
-
-ul {
-  list-style: none;
-}
-
-.app-logo {
-  margin-top: 20px;
-}
-
-.app-logo img {
-  width: 140px;
-}
-
-.footer hr {
-  border: none;
-  background: #b5b5b5;
-  height: 1px;
-  margin: 20px 0;
-}
-
-.copyright {
-  text-align: center;
+@media only screen and (max-width: 990px) {
+  .main-header h1 {
+    font-size: 20px;
+  }
+  .main-header img {
+    width: 100%;
+  }
+  .find-out {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+        grid-template-areas: none;
+    grid-auto-rows: 0.5;
+  }
+  .find-out p {
+    font-size: 15px;
+  }
+  .find-out h2 {
+    font-size: 20px;
+  }
+  .graph {
+        grid-template-areas: none;
+  }
+  .title h1 {
+    font-size: 15px;
+  }
 }
 /*# sourceMappingURL=whyEV.css.map */
