--- a/CSS/whyEV.scss
+++ b/CSS/whyEV.scss
@@ -1,1 +1,131 @@
-@import "home"
+@import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import "home";
+*
+{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body
+{
+    font-family: 'Poppins', sans-serif;
+    background: radial-gradient(#fff, #d1f7ae);
+}
+.main-container
+{
+    max-width: 1300px;
+    margin: auto;
+    padding-left: 45px;
+    padding-right: 45px;
+}
+.main-header
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.main-header h1, h2
+{
+    color: $primary-color;
+    font-weight: 500;
+    padding: 20px 0;
+}
+.main-header img
+{
+    padding: 20px 0;
+    border-radius: 80px;
+}
+.grid-1,.grid-2,.grid-3,.grid-4,.grid-5,.grid-6
+{
+    border: 2px solid $primary-color;
+    padding: 8px 8px;
+}
+.find-out
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: 
+    "grid-1 grid-2 grid-3"
+    "grid-4 grd-5 grid-6"
+    ;
+    column-gap: 20px;
+    row-gap: 10px;
+    padding: 20px 0;
+    grid-auto-rows: 1fr ;
+}
+.graph
+{
+    display: grid;
+    grid-template-columns: graph1 graph2;
+    grid-template-areas: 
+    "grid-1 grid-2";
+    justify-content: center;
+    column-gap: 20px;
+    row-gap: 10px;
+    padding: 20px 0;
+}
+.graph img
+{
+    width: 100%;
+}
+.title
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: justify;
+}
+.page-bottom
+{
+    display: flex;
+    flex-direction: column;
+    padding: 30px 0;
+}
+.page-bottom h1 
+{
+    color: $primary-color;
+    font-weight: 400;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 20px;
+}
+@media only screen and (max-width: 990px) 
+{
+    .main-header h1
+    {
+        font-size: 20px;
+    }
+    .main-header img 
+    {
+        width: 100%;
+    }
+    .find-out
+    {
+        grid-template-columns: 1fr;
+        grid-template-areas: none;
+        grid-auto-rows: 0.5;
+        p 
+        {
+            font-size: 15px;
+        }
+        h2 
+        {
+            font-size: 20px;
+        }
+    }
+    .graph
+    {
+        grid-template-areas: none;
+       
+    }
+    .title
+    {
+        h1 
+        {
+            font-size: 15px;
+        }
+    }
+}
