--- a/CSS/navbar.scss
+++ b/CSS/navbar.scss
@@ -61,7 +61,7 @@ nav a:hover
       
       .dropdown-content a {
         float:none;
-        color: black;
+        color: $primary-color;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
