--- a/CSS/Footer CSS/footer.scss
+++ b/CSS/Footer CSS/footer.scss
@@ -29,6 +29,14 @@
     flex: 1;
     text-align: center;
 }
+.footer-col-2 a
+{
+    text-align: center;
+}
+.footer-col-2 a:hover
+{
+    color: white;
+}
 .footer-col-2 img
 {
     width: 180px;
