--- a/CSS/Navigation CSS/navbar.scss
+++ b/CSS/Navigation CSS/navbar.scss
@@ -1,4 +1,6 @@
-@import "home";
+$primary-color:#3a7206;
+$btn-color:#72a741;
+
 nav
 {
     flex: 1;
@@ -12,13 +14,14 @@ nav ul
 nav ul li
 {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 30px;
 }
 a
 {
     text-decoration: none;
     color: #555;
-    font-weight: 500;
+    font-weight: 400;
+    padding: 10px;
 }
 nav a:hover
 {
