--- a/CSS/WhyEV-page2-CSS/whyEV.css
+++ b/CSS/WhyEV-page2-CSS/whyEV.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
@@ -259,107 +260,214 @@ p {
   }
 }
 
-nav {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  text-align: right;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-nav ul {
-  display: inline-block;
-  list-style-type: none;
+body {
+  font-family: 'Poppins', sans-serif;
+  background: radial-gradient(#fff, #d1f7ae);
 }
 
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
+.main-container {
+  max-width: 1300px;
+  margin: auto;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
-a {
-  text-decoration: none;
-  color: #555;
+.main-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.main-header h1, h2 {
+  color: black;
+  font-weight: 400;
+  font-size: 20px;
+  padding: 20px 0;
+  text-align: justify;
+}
+
+.main-header img {
+  padding: 20px 0;
+  border-radius: 80px;
+}
+
+.main-header img:hover {
+  cursor: pointer;
+}
+
+.grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6 {
+  border: 2px solid #3a7206;
+  padding: 8px 8px;
+}
+
+.find-out {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-areas: "grid-1 grid-2 grid-3" "grid-4 grd-5 grid-6";
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+  row-gap: 10px;
+  padding: 20px 0;
+  grid-auto-rows: 1fr;
+}
+
+.graph {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: graph1 graph2;
+      grid-template-columns: graph1 graph2;
+      grid-template-areas: "grid-1 grid-2";
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+  row-gap: 10px;
+  padding: 20px 0;
+}
+
+.graph img {
+  width: 100%;
+}
+
+.title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: justify;
+}
+
+.page-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 30px 0;
+}
+
+.page-bottom h1 {
+  color: #3a7206;
+  font-weight: 400;
+  padding: 20px 0;
+  text-align: justify;
+  font-size: 20px;
+}
+
+.page-bottom-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "grid-part-1 grid-part-2";
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+}
+
+.grid-part-1 h1 {
+  text-align: justify;
+  color: #3a7206;
+  font-weight: 400;
+  padding: 20px 0;
+  font-size: 20px;
+}
+
+.why-ev {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+
+.why-ev h1 {
+  text-align: center;
+  color: #3a7206;
   font-weight: 500;
 }
 
-nav a:hover {
-  cursor: pointer;
-  color: red;
-}
-
 @media only screen and (max-width: 990px) {
-  .dropdown {
-    float: left;
-    text-align: right;
-    width: 100%;
-    border: 1px solid black;
-    background: #72a741;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-  }
-  .dropdown .dropbtn {
+  .main-header h1 {
     font-size: 20px;
-    outline: none;
-    padding: 5px 15px;
-    background-color: inherit;
-    margin: 0;
-    border: 0;
+    text-align: justify;
   }
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: white;
-  }
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+  .main-header img {
     width: 100%;
   }
-  .dropdown-content a {
-    float: none;
-    color: #3a7206;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: center;
+  .find-out {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+        grid-template-areas: none;
+    grid-auto-rows: 0.5;
   }
-  .header .row {
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .find-out p {
+    font-size: 15px;
   }
-  .dropdown-content a:hover {
-    background-color: #ddd;
+  .find-out h2 {
+    font-size: 20px;
   }
-  .dropdown:hover .dropdown-content {
-    display: block;
+  .graph {
+        grid-template-areas: none;
   }
-  nav {
-    display: none;
+  .title h1 {
+    font-size: 15px;
   }
-  .navbar {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  .why-ev h1 {
+    font-size: 20px;
+  }
+  .page-bottom-grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+        grid-template-areas: none;
+  }
+  .page-bottom-grid h1 {
+    font-size: 20px;
+    font-weight: 300;
+  }
+  .page-bottom h1 {
+    font-size: 20px;
   }
 }
-
-@media only screen and (min-width: 990px) {
-  .dropdown {
-    display: none;
-  }
-}
-/*# sourceMappingURL=navbar.css.map */
+/*# sourceMappingURL=whyEV.css.map */
