--- a/CSS/Video Css/video.css
+++ b/CSS/Video Css/video.css
@@ -1,39 +1,45 @@
-.video
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
+.video {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.video h1
-{
-    color: $primary-color;
-    padding: 30px 0;
-    font-weight: 400;
+
+.video h1 {
+  color: #3a7206;
+  padding: 30px;
+  font-weight: 400;
 }
-.responsive-iframe
-{
-    width: 100%;
-    height: 40vh;
-    border: none;
+
+.responsive-iframe {
+  width: 100%;
+  height: 40vh;
+  border: none;
 }
-@media only screen and (max-width: 990px) 
-{
-.video
-{
-  width: 80%;
+
+@media only screen and (max-width: 990px) {
+  .video {
+    width: 80%;
+  }
+  .video h1 {
+    font-size: 20px;
+    font-weight: 300;
+  }
+  .responsive-iframe {
+    height: 25vh;
+  }
 }
-.video h1
-{
-  font-size: 20px;
-  font-weight: 300;
-}
-.responsive-iframe
-{
-  height: 25vh;
-}
-}
+/*# sourceMappingURL=video.css.map */
