--- a/CSS/WhyEV-page2-CSS/whyEV.css
+++ b/CSS/WhyEV-page2-CSS/whyEV.css
@@ -1,265 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: 'Poppins', sans-serif;
-  background: radial-gradient(#fff, #d1f7ae);
-}
-
-.container > h1 {
-  color: #3a7206;
-  padding-bottom: 30px;
-  text-align: center;
-}
-
-.header .row {
-  margin-top: 70px;
-}
-
-.container {
-  max-width: 1300px;
-  margin: auto;
-  padding-left: 45px;
-  padding-right: 45px;
-}
-
-.container h1 {
-  font-weight: 400;
-}
-
-p {
-  color: #555;
-  text-align: justify;
-  font-weight: 400;
-  line-height: 30px;
-  font-size: 20px;
-}
-
-.row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.col-2 {
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  min-width: 300px;
-}
-
-.col-2 img {
-  max-width: 100%;
-  padding: 50px 0;
-  cursor: pointer;
-}
-
-.col-2 img:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-  cursor: pointer;
-}
-
-.col-2 h1 {
-  font-size: 50px;
-  line-height: 60px;
-  margin: 25px 0;
-  font-weight: 500;
-  color: #3a7206;
-}
-
-.col-2 p {
-  text-align: justify;
-}
-
-.btn {
-  display: inline-block;
-  background: #72a741;
-  color: #fff;
-  padding: 8px 30px;
-  margin: 70px 0;
-  border-radius: 30px;
-  -webkit-transition: background 0.8s;
-  transition: background 0.8s;
-}
-
-.btn:hover {
-  background: #3a7206;
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-}
-
-.small-container {
-  max-width: 1080px;
-  margin: auto;
-  padding-left: 25px;
-  padding-right: 25px;
-}
-
-.col-3 {
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
-  min-width: 250px;
-  margin-bottom: 30px;
-}
-
-.col-3 img {
-  width: 100%;
-  cursor: pointer;
-}
-
-.col-3 img:hover {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-  cursor: pointer;
-}
-
-.col-4 {
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
-  min-width: 250px;
-  margin-bottom: 30px;
-}
-
-.col-4 img {
-  width: 100%;
-  cursor: pointer;
-}
-
-.testimonial {
-  padding-top: 100px;
-}
-
-.testimonial .col-4 {
-  text-align: center;
-  padding: 40px 20px;
-  -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
-          box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
-}
-
-.testimonial .col-4:hover {
-  -webkit-transform: translateY(-20px);
-          transform: translateY(-20px);
-}
-
-.testimonial img {
-  width: 40%;
-  margin-top: 20px;
-  border-radius: 50%;
-  height: 10vh;
-}
-
-.quote {
-  height: 18vh;
-  gap: 20px;
-}
-
-.fa.fa-quote-left {
-  color: #3a7206;
-}
-
-.col-4 p {
-  font-size: 15px;
-  margin: 12px 0;
-  color: #777;
-}
-
-.col-4 h3 {
-  font-size: 15px;
-  color: #3a7206;
-  font-weight: 600;
-}
-
-.brands {
-  margin: 100px auto;
-}
-
-.col-5 {
-  width: 160px;
-}
-
-.col-5 img {
-  width: 100%;
-  cursor: pointer;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
-}
-
-.col-5 img:hover {
-  -webkit-filter: grayscale(0);
-          filter: grayscale(0);
-}
-
-@media only screen and (max-width: 990px) {
-  .container h1 {
-    font-weight: 300;
-  }
-  .col-2 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    text-align: center;
-  }
-  .col-2 h1 {
-    font-size: 30px;
-    line-height: 30px;
-    text-align: center;
-    font-weight: 400;
-  }
-  .col-2 p {
-    font-size: 20px;
-  }
-  .col-2 img {
-    padding: 10px 0;
-  }
-  .btn {
-    margin: 10px 0;
-  }
-  .testimonial {
-    padding-top: 20px;
-  }
-  .testimonial img {
-    width: 70%;
-  }
-  .testimonial .col-4 {
-    margin: 30px;
-    width: 100%;
-  }
-  .row {
-    width: 100%;
-  }
-}
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -297,8 +36,8 @@ body {
 }
 
 .main-header h1, h2 {
-  color: black;
-  font-weight: 400;
+  color: #3a7206;
+  font-weight: 500;
   font-size: 20px;
   padding: 20px 0;
   text-align: justify;
@@ -313,9 +52,33 @@ body {
   cursor: pointer;
 }
 
+.image-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: "first-img-grid";
+  padding: 20px 0;
+  grid-auto-rows: 1fr;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+}
+
 .grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6 {
-  border: 2px solid #3a7206;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+          box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   padding: 8px 8px;
+}
+
+.grid-1 p, .grid-2 p, .grid-3 p, .grid-4 p, .grid-5 p, .grid-6 p {
+  color: #72a741;
+  text-align: justify;
+}
+
+.grid-1 h2, .grid-2 h2, .grid-3 h2, .grid-4 h2, .grid-5 h2, .grid-6 h2 {
+  text-align: center;
+  color: #3a7206;
+  font-weight: 500;
 }
 
 .find-out {
@@ -394,6 +157,14 @@ body {
       grid-template-areas: "grid-part-1 grid-part-2";
   -webkit-column-gap: 20px;
           column-gap: 20px;
+  row-gap: 20px;
+  padding: 20px 0;
+}
+
+.grid-part-1, grid-part-2 {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+  padding: 20px 10px;
 }
 
 .grid-part-1 h1 {
@@ -418,12 +189,22 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
   padding: 20px;
 }
 
+.tesla-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
 .why-ev h1 {
-  text-align: center;
+  text-align: justify;
   color: #3a7206;
   font-weight: 500;
 }
@@ -456,6 +237,7 @@ body {
   }
   .why-ev h1 {
     font-size: 20px;
+    text-align: center;
   }
   .page-bottom-grid {
     -ms-grid-columns: 1fr;
@@ -468,6 +250,10 @@ body {
   }
   .page-bottom h1 {
     font-size: 20px;
+  }
+  .image-grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
 /*# sourceMappingURL=whyEV.css.map */
