--- a/CSS/WhyEV-page2-CSS/whyEV.css
+++ b/CSS/WhyEV-page2-CSS/whyEV.css
@@ -35,12 +35,20 @@ body {
           align-items: center;
 }
 
-.main-header h1, h2 {
+.main-header h1 {
   color: #3a7206;
   font-weight: 500;
   font-size: 20px;
   padding: 20px 0;
   text-align: justify;
+}
+
+.main-header h2 {
+  font-size: 30px;
+  padding: 20px 0;
+  text-align: center;
+  color: #3a7206;
+  font-weight: 400;
 }
 
 .main-header img {
@@ -62,6 +70,14 @@ body {
   grid-auto-rows: 1fr;
   -webkit-column-gap: 20px;
           column-gap: 20px;
+}
+
+.first-img-grid img:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
 }
 
 .grid-1, .grid-2, .grid-3, .grid-4, .grid-5, .grid-6 {
@@ -161,7 +177,7 @@ body {
   padding: 20px 0;
 }
 
-.grid-part-1, grid-part-2 {
+.grid-part-1, .grid-part-2 {
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
           box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
   padding: 20px 10px;
@@ -200,7 +216,15 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 100%;
+  width: 80%;
+}
+
+.tesla-img img:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
 }
 
 .why-ev h1 {
@@ -209,13 +233,29 @@ body {
   font-weight: 500;
 }
 
+.grid-1:hover, .grid-2:hover, .grid-3:hover {
+  -webkit-transform: translateY(-20px);
+          transform: translateY(-20px);
+  cursor: pointer;
+}
+
+.grid-4:hover, .grid-5:hover, .grid-6:hover {
+  -webkit-transform: translateY(20px);
+          transform: translateY(20px);
+  cursor: pointer;
+}
+
 @media only screen and (max-width: 990px) {
   .main-header h1 {
     font-size: 20px;
     text-align: justify;
+    font-weight: 300;
   }
   .main-header img {
     width: 100%;
+  }
+  .main-header h2 {
+    font-size: 25px;
   }
   .find-out {
     -ms-grid-columns: 1fr;
@@ -254,6 +294,11 @@ body {
   .image-grid {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
+  }
+  .grid-1:hover, .grid-2:hover, .grid-3:hover,
+  .grid-4:hover, .grid-5:hover, .grid-6:hover {
+    -webkit-transform: none;
+            transform: none;
   }
 }
 /*# sourceMappingURL=whyEV.css.map */
