--- a/CSS/Video Css/video.css
+++ b/CSS/Video Css/video.css
@@ -13,7 +13,7 @@
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  padding-bottom: 20px;
+  padding: 20px 0;
   margin-left: auto;
   margin-right: auto;
 }
@@ -26,7 +26,7 @@
 
 .responsive-iframe {
   width: 100%;
-  height: 40vh;
+  height: 60vh;
   border: none;
 }
 
