--- a/CSS/Video Css/video.scss
+++ b/CSS/Video Css/video.scss
@@ -8,7 +8,7 @@ $btn-color:#72a741;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-bottom: 20px;
+    padding: 20px 0;
     margin-left: auto;
     margin-right: auto;
 }
@@ -21,7 +21,7 @@ $btn-color:#72a741;
 .responsive-iframe
 {
     width: 100%;
-    height: 40vh;
+    height: 60vh;
     border: none;
 }
 @media only screen and (max-width: 990px) 
