--- a/CSS/climateCSS/climate.scss
+++ b/CSS/climateCSS/climate.scss
@@ -1,7 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-$primary-color:#5ea31d;
-$btn-color:#72a741;
 *
 {
     box-sizing: border-box;
@@ -11,18 +8,17 @@ $btn-color:#72a741;
 body
 {
     font-family: 'Poppins', sans-serif;
-    background: radial-gradient(white, rgb(214, 214, 214));
+    background: radial-gradient(white, #87ceeb);
     scroll-behavior: smooth;
 }
-.main-container
+.climate-container
 {
     max-width: 1300px;
     margin: auto;
     padding-left: 45px;
     padding-right: 45px;
-    
 }
-.main-header
+.page-header
 {
     display: flex;
     flex-direction: column;
@@ -30,21 +26,13 @@ body
     justify-content: center;
     align-items: center;
     padding: 40px 45px 0 40px;
-    
-    h1 
-    {
-        font-size: 30px;
-        font-weight: 400;
-        text-align: center;
-        color: $primary-color;
-        text-transform: uppercase;
-    }
-    h2 
-    {
-        font-size: 20px;
-        color: #555;
-        text-align: center;
-    }
+}
+.page-header h1 
+{
+    font-size: 30px;
+    font-weight: 400;
+    text-align: center;
+    text-transform: uppercase;
 }
 .media
 {
@@ -53,7 +41,7 @@ body
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 30px 0;
+    padding: 20px 0;
     h3 
     {
         padding: 0 20px;
@@ -95,79 +83,39 @@ body
         color: gray;   
     }
 }
-.first-photo img
+.earth
 {
-    width: 100%;
-    padding-top: 30px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    background-image: url(https://storage.googleapis.com/gweb-uniblog-publish-prod/images/New-global-view.max-1000x1000.jpeg);
+    background-repeat: no-repeat;
+    border-radius: 50%;
+    background-size: cover;
+    box-shadow: -20px -20px 50px 2px #000 inset, 0 0 20px 2px #000;
+    animation: spin 30s linear alternate infinite;
+    z-index: -1;
 }
-.first-photo h3 
+@keyframes spin
 {
-    color: #555;
-    font-weight: 300;
+    100%{background-position: 100%;}    
 }
-.reasons
+.para-one
 {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    align-items: flex-start;
-    justify-content: flex-start;
-    padding: 10px 0;
-    h1 
-    {
-        text-align: left;
-        font-weight: 400;
-        padding: 20px 0;
-    }
-    p 
-    {
-        text-align: justify;
-        font-size: 18px;
-    }
-}
-.sec-photo
-{
-    display: flex;
-    flex-direction: column;
+    padding-top: 300px;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    padding: 30px 0;
-    img 
+    text-align: justify;
+    h2 
     {
-        width: 100%;
+            font-size: 20px;
+            font-weight: 300;
     }
 }
-@media only screen and (max-width: 990px) 
-{
-    .main-header
-    {
-        h1 
-        {
-            font-size: 20px;
-        }
-        h2 
-        {
-            font-size: 18px;
-            font-weight: 400;
-        }
-    }
-    .first-photo 
-    {
-        h3 
-        {
-            font-size: 15px;
-        }
-    }
-    .reasons 
-    {
-        h1 
-        {
-            font-size: 20px;
-        }
-        p 
-        {
-            font-size: 15px;
-        }
-    }
-}    
