--- a/CSS/NewsCss/news.scss
+++ b/CSS/NewsCss/news.scss
@@ -87,6 +87,7 @@ canvas
         font-size: 22px;
         font-weight: 400;
         line-height: 25px;
+        color: $primary-color!;
     }
     h1:hover 
     {
