--- a/CSS/NewsCss/news.scss
+++ b/CSS/NewsCss/news.scss
@@ -87,7 +87,7 @@ canvas
         font-size: 22px;
         font-weight: 400;
         line-height: 25px;
-        color: $primary-color!;
+        color: $primary-color;
     }
     h1:hover 
     {
@@ -110,5 +110,34 @@ canvas
 .ref
 {
     color: black;
+}
+@media only screen and (max-width: 990px) 
+{
+   canvas 
+   {
+       width: 400px;
+
+   }
+    .Photos img 
+    {
+        width: 90%;
+    }
+    .grid-news
+    {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .heading {
+        h1 
+        {
+            font-size: 16px;
+        }
+        p 
+        {
+            font-size: 14px;
+        }
+    }
+
 }
 
