--- a/CSS/aboutusCSS/aboutus.scss
+++ b/CSS/aboutusCSS/aboutus.scss
@@ -12,6 +12,7 @@ body
     font-family: 'Poppins', sans-serif;
     background: radial-gradient(white, #d1f7ae);
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 .heading
 {
@@ -28,6 +29,7 @@ body
     display: flex;
     flex-direction: column;
     align-items:center;
+    width: 100%;
     padding: 10px;
 
     h1 
@@ -77,7 +79,7 @@ body
 .contact-left
 {
     flex-basis: 60%;
-    padding: 40px 60px;
+    padding: 20px 60px;
     background-color: white;
     h3 
     {
@@ -124,12 +126,13 @@ input
 .input-row, .input-group
 {
     flex-basis: 45%;
+    position: relative;
 }
+
 label
 {
     margin-bottom: 6px;
     display: block;
-
 }
 textarea 
 {
@@ -137,6 +140,10 @@ textarea
     border: 1px solid $primary-color;
     padding: 10px;
     box-sizing: border-box;
+}
+.input-group2
+{
+    flex-basis: 100%;
 }
 $color: $primary-color;
 .button{
@@ -146,6 +153,7 @@ $color: $primary-color;
     margin-top: 20px;
     width: 150px;
     border-radius: 10rem;
+    border: 0px;
     color: #fff;
     text-transform: uppercase;
     font-size: 1rem;
@@ -185,16 +193,218 @@ $color: $primary-color;
     }
   }
   
-
+table 
+{
+    padding-top: 20px;
+}
 tr, td:first-child
 {
     padding-right: 20px;
 }
 tr, td
 {
-    padding-top: 20px;
+    padding-top: 30px;
     font-size: 18px;
 }
+
+.subscribe 
+{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding: 80px 0 50px 0;
+    width: 100%;
+    p 
+    {
+        text-align: center;
+        color: $primary-color;
+        padding: 20px;
+        margin-right: 10px;
+    }
+}
+.wrapper{
+    height: 40px;
+    width: 400px;
+    display: flex;
+    text-align: center;
+    align-items: flex-end;
+    justify-content: flex-end;
+  }
+  .wrapper .btn-1
+  {
+    height: 100%;
+    width: 50%;
+    color: $primary-color;
+    background: #fff;
+    line-height: 40px;
+    font-size: 22px;
+    font-weight: 400;
+    border-radius: 5px;
+    user-select: none;
+    cursor: pointer;
+    box-shadow: 5px 5px 30px rgba(0,0,0,.2);
+    transition: 0.4s cubic-bezier(0.68,-0.55,0.265,1.55);
+  }
+  .wrapper .btn-1:active{
+    transform: scale(0.9);
+  }
+  #click:checked ~ .btn-1{
+    height: 40px;
+    width: 100px;
+    opacity: 0;
+    outline: none;
+    pointer-events: none;
+  }
+  .wrapper .field{
+    height: 100%;
+    width: 0%;
+    opacity: 0;
+    pointer-events: none;
+    position: relative;
+    transition: 0.4s cubic-bezier(0.68,-0.55,0.265,1.55);
+  }
+  #click:checked ~ .field{
+    width: 100%;
+    opacity: 1;
+    pointer-events: auto;
+  }
+  .wrapper .field input{
+    height: 100%;
+    width: 100%;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    padding: 0 110px 0 15px;
+    font-size: 14px;
+    outline: none;
+    box-shadow: 5px 5px 30px rgba(0,0,0,.2);
+  }
+  .wrapper .field input::placeholder{
+    color: #999;
+    font-size: 16px;
+  }
+  .wrapper .field .btn-2{
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translateY(-50%);
+    font-size: 16px;
+    color: #fff;
+    line-height: 30px;
+    background: $primary-color;
+    height: 30px;
+    width: 100px;
+    user-select: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  .wrapper .field .btn-2:active{
+    transform: translateY(-50%) scale(0.9);
+  }
+  .wrapper #click{
+    display: none;
+  }
+  .pop-up
+  {
+      top: 0;
+      left: 0;
+      opacity: 0;
+      width: 100vh;
+      pointer-events: none;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      position: fixed;
+      h1 
+      {
+          color: $primary-color;
+          text-transform: uppercase;
+          font-weight: 300;
+      }
+      h3
+      {
+          color: $primary-color;
+          text-transform: uppercase;
+          font-weight: 300;
+      }
+  }
+  .pop-up.show
+  {
+    pointer-events: auto;
+    opacity: 1;
+    z-index: 10;
+  }
+  .pop-up-message
+  {
+      max-width: 100%;
+      width: 600px;
+      padding: 30px 50px;
+      border-radius: 5px;
+      background-color: #fff;
+      
+  }
+  .input-group i 
+  {
+      position: absolute;
+      top: 40px;
+      right: 10px;
+      visibility: hidden;
+  }
+  .input-group small 
+  {
+      visibility: hidden;
+      position: absolute;
+      bottom: -20px;
+      left: 0;
+  }
+  
+  .input-group.success input 
+  {
+      border-color: $primary-color;
+  }
+  .input-group.error input 
+  {
+      border-color: red;
+  }
+  .input-group.success i.fa-check-circle 
+  {
+      visibility: visible;
+      color: #5ea31d;
+  }
+  .input-group.error i.fa-exclamation-circle 
+  {
+      visibility: visible;
+      color: red;
+  }
+  .input-group.error small
+  {
+      color: red;
+      visibility: visible;
+  }
+  .senderror 
+{
+    visibility: hidden;
+}
+.senderror.show 
+{
+    visibility: visible;
+    color: red;
+}
+  .subscribe-message
+  {
+      visibility: hidden;
+  }
+  .subscribe-message.show 
+  {
+      visibility: visible;
+      color: red;
+      margin-top: -15px;
+  }
+
 @media only screen and (max-width: 990px) 
 {
     .contact-left
@@ -204,6 +414,7 @@ tr, td
     .contact-right
     {
         flex-basis: 100%;
+
         tr, td
         {
             font-size: 16px;
@@ -228,4 +439,6 @@ tr, td
             font-size: 16px;
         }
     }
+  
+
 }
