--- a/CSS/aboutusCSS/aboutus.css
+++ b/CSS/aboutusCSS/aboutus.css
@@ -171,11 +171,6 @@ textarea {
           box-sizing: border-box;
 }
 
-.input-group2 {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-}
-
 .button {
   display: inline-block;
   padding: .75rem 1.25rem;
@@ -256,7 +251,7 @@ tr, td {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  padding: 80px 0 50px 0;
+  padding: 30px 0;
   width: 100%;
 }
 
@@ -497,10 +492,16 @@ tr, td {
 .subscribe-message.show {
   visibility: visible;
   color: red;
-  margin-top: -15px;
+  margin-top: -22px;
 }
 
 @media only screen and (max-width: 990px) {
+  .input-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
   .contact-left {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
@@ -526,6 +527,13 @@ tr, td {
   }
   .aboutus p {
     font-size: 16px;
+  }
+  .subscribe-message.show {
+    visibility: visible;
+    color: red;
+    margin-top: -22px;
+    text-align: end;
+    font-size: 14px;
   }
 }
 /*# sourceMappingURL=aboutus.css.map */
