--- a/CSS/aboutusCSS/aboutus.scss
+++ b/CSS/aboutusCSS/aboutus.scss
@@ -141,10 +141,7 @@ textarea
     padding: 10px;
     box-sizing: border-box;
 }
-.input-group2
-{
-    flex-basis: 100%;
-}
+
 $color: $primary-color;
 .button{
     display: inline-block;
@@ -213,7 +210,7 @@ tr, td
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
-    padding: 80px 0 50px 0;
+    padding: 30px 0;
     width: 100%;
     p 
     {
@@ -402,11 +399,15 @@ tr, td
   {
       visibility: visible;
       color: red;
-      margin-top: -15px;
+      margin-top: -22px;
   }
 
 @media only screen and (max-width: 990px) 
 {
+    .input-row
+    {
+        flex-direction: column;
+    }
     .contact-left
     {
         flex-basis: 100%;
@@ -439,6 +440,13 @@ tr, td
             font-size: 16px;
         }
     }
-  
+    .subscribe-message.show 
+  {
+      visibility: visible;
+      color: red;
+      margin-top: -22px;
+      text-align: end;
+     font-size: 14px;
+  }
 
 }
