--- a/CSS/Home CSS/home.css
+++ b/CSS/Home CSS/home.css
@@ -6,30 +6,33 @@
   margin: 0;
   padding: 0;
 }
-/*body css*/
+
 body {
   font-family: 'Poppins', sans-serif;
   background: radial-gradient(#fff, #d1f7ae);
 }
-/*main container fonts*/
+
 .container > h1 {
   color: #3a7206;
   padding-bottom: 30px;
   text-align: center;
-  font-weight: 400;
 }
-/*header row class margin*/
+
 .header .row {
   margin-top: 70px;
 }
-/*main container css*/
+
 .container {
   max-width: 1300px;
   margin: auto;
   padding-left: 45px;
   padding-right: 45px;
 }
-/*page para tag css*/
+
+.container h1 {
+  font-weight: 400;
+}
+
 p {
   color: #555;
   text-align: justify;
@@ -38,9 +41,6 @@ p {
   font-size: 20px;
 }
 
-/*Harpreet Singh - 23/11/2021
-this class containes two more divs in it
-*/
 .row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -53,27 +53,19 @@ this class containes two more divs in it
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
-/*Harpreet Singh - 23/11/2021
-this class has text in it on left side of the page along with a 
-photo on write
-*/
+
 .col-2 {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
   min-width: 300px;
 }
-/*Harpreet Singh - 23/11/2021
-photo code
-*/
+
 .col-2 img {
   max-width: 100%;
   padding: 50px 0;
   cursor: pointer;
 }
-/*Harpreet Singh - 23/11/2021
-photo hoover css which will be effcetive on hover on the photo
-photo will pop-out slowly on hover
-*/
+
 .col-2 img:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
@@ -104,10 +96,7 @@ photo will pop-out slowly on hover
   -webkit-transition: background 0.8s;
   transition: background 0.8s;
 }
-/*Harpreet Singh - 23/11/2021
-this class contains a l=link to second page(why-ev)
-and j=has hover effect as below
-*/
+
 .btn:hover {
   background: #3a7206;
   -webkit-transform: scale(1.2);
@@ -115,10 +104,7 @@ and j=has hover effect as below
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
 }
-/*Harpreet Singh - 23/11/2021
-this div contains around 3 divs with photos in it
 
-*/
 .small-container {
   max-width: 1080px;
   margin: auto;
@@ -137,9 +123,7 @@ this div contains around 3 divs with photos in it
   width: 100%;
   cursor: pointer;
 }
-/*Harpreet Singh - 23/11/2021
-hover effect on img
-*/
+
 .col-3 img:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
@@ -159,10 +143,7 @@ hover effect on img
   width: 100%;
   cursor: pointer;
 }
-/*Harpreet Singh - 23/11/2021
-this class contains the quote from some 
-great prople around the world about electric vehicles
-*/
+
 .testimonial {
   padding-top: 100px;
 }
@@ -178,19 +159,17 @@ great prople around the world about electric vehicles
   transition: transform 0.5s;
   transition: transform 0.5s, -webkit-transform 0.5s;
 }
-/*Harpreet Singh - 23/11/2021
-hover effects on the photos
-*/
+
 .testimonial .col-4:hover {
   -webkit-transform: translateY(-20px);
           transform: translateY(-20px);
 }
 
 .testimonial img {
-  width: 50%;
+  width: 40%;
   margin-top: 20px;
   border-radius: 50%;
-  height: 13vh;
+  height: 10vh;
 }
 
 .quote {
@@ -233,9 +212,7 @@ hover effects on the photos
   -webkit-filter: grayscale(0);
           filter: grayscale(0);
 }
-/*Harpreet Singh - 23/11/2021
-media query for making poge responsive
-*/
+
 @media only screen and (max-width: 990px) {
   .container h1 {
     font-weight: 300;
