--- a/CSS/aboutusCSS/aboutus.scss
+++ b/CSS/aboutusCSS/aboutus.scss
@@ -307,9 +307,9 @@ tr, td
       top: 0;
       left: 0;
       opacity: 0;
-      width: 100vh;
+      width: 100%;
       pointer-events: none;
-      height: 100vh;
+      height: 50%;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -337,11 +337,12 @@ tr, td
   }
   .pop-up-message
   {
-      max-width: 100%;
-      width: 600px;
+      max-width: 80%;
+      width: 50%;
       padding: 30px 50px;
       border-radius: 5px;
       background-color: #fff;
+      border: 2px solid $primary-color;
       
   }
   .input-group i 
@@ -402,6 +403,7 @@ tr, td
       margin-top: -22px;
   }
 
+
 @media only screen and (max-width: 990px) 
 {
     .input-row
@@ -411,6 +413,7 @@ tr, td
     .contact-left
     {
         flex-basis: 100%;
+        padding: 20px;
     }
     .contact-right
     {
@@ -424,6 +427,11 @@ tr, td
     .contact-box
     {
         flex-direction: column;
+    }
+
+    label
+    {
+        padding: 20px 0;
     }
     .aboutus
     {
@@ -447,6 +455,24 @@ tr, td
       margin-top: -22px;
       text-align: end;
      font-size: 14px;
+  }
+  .pop-up 
+  {
+      h1 
+      {
+          font-size: 20px;
+      }
+      img 
+      {
+          width: 70%;
+      }
+  }
+  .pop-up-message 
+  {
+      h1 
+      {
+          font-size: 16px;
+      }
   }
 
 }
